# diy_typeless

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  conductor.json
.agents/skills/prompt-evolution/: SKILL.md
.claude/skills/: prompt-evolution
.codex/environments/: environment.toml
app/DIYTypeless/: Package.swift
app/DIYTypeless/DIYTypeless/: ApiKeyStore.swift  AppContextDetector.swift  AppViewModel.swift  ContentView.swift  DIYTypeless-Bridging-Header.h  DIYTypelessApp.swift  DIYTypelessCore+QwenASR.swift  DIYTypelessCore.swift  DIYTypelessCoreFFI.h  DIYTypelessCoreFFI.modulemap  Info.plist  KeyMonitor.swift  PermissionManager.swift  StatusOverlay.swift  TextOutputManager.swift
app/DIYTypeless/DIYTypeless.xcodeproj/: project.pbxproj
app/DIYTypeless/DIYTypelessTests/: CoreErrorMapperTests.swift  DIYTypelessTests.swift  OnboardingStateTests.swift  (+4 more)
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: diagnose.rs  mod.rs  utils.rs  wav.rs
cli/tests/: cli_help.rs
core/: Cargo.toml  build.rs  uniffi.toml
core/src/: async_executor.rs  audio.rs  cancellation.rs  config.rs  error.rs  http_client.rs  lib.rs  llm_processor.rs  pipeline.rs  polish.rs  qwen_asr_ffi.rs  retry.rs  streaming_asr.rs  transcribe.rs
core/src/cli/: main.rs
core/tests/: core_error_contracts.rs
docs/: ai-ready-codebase.md  ai-ready-progress.md  flaky-recording-state-tests.md  local-asr-implementation.md  swift-core-module-boundary.md  swift-testing-gold-standard.md  test-coverage-gap-analysis.md
docs/archive/: plan-ui-ux-enhancement-2025-02-22.md
docs/optimization/: 2025-02-21-groq-whisper-speed-optimization.md
docs/plans/: 2026-02-26-usecase-refactor-plan.md  2026-03-04-option3-core-module-implementation.md  2026-03-05-bug-hardening-design.md  2026-03-05-bug-hardening-implementation.md  2026-03-05-swift-core-layout-migration.md
script/: build_and_run.sh
scripts/: build-dmg.sh  build-rust-universal.sh  dev-loop-build.sh  dev-loop.sh  open-dev-app.sh  prod-dmg-build.sh  reset-permissions.sh  setup-xcode-symlink.sh
tests/polish-prompt/: evolution-log.md  suite.json
(+315 files in other folders)
