 [package]
 name = "diy_typeless_cli"
 version = "0.1.0"
 edition = "2021"
 description = "CLI for DIY Typeless"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
anyhow = "1.0.100"
chrono = "0.4.43"
clap = { version = "4.5.56", features = ["derive"] }
secrecy = "0.10"
dirs = "6.0.0"
 diy_typeless_core = { path = "../core" }
dotenvy = "0.15.7"
hound = "3.5.1"

[lints]
workspace = true
 
