[package]
name = "diy_typeless_core"
version = "0.1.0"
edition = "2021"
description = "Rust core for DIY Typeless"
license = "MIT OR Apache-2.0"
build = "build.rs"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "cli"
path = "src/cli/main.rs"
required-features = ["cli-bin"]

[features]
default = []
cli = []
cli-bin = ["cli"]

[dependencies]
biquad = "0.5.0"
cpal = "0.17.1"
hound = "3.5.1"
libc = "0.2"
log = "0.4.29"
once_cell = "1.21.3"
reqwest = { version = "0.13.1", features = ["blocking", "json", "multipart"] }
serde = "1.0.228"
serde_json = "1.0.149"
thiserror = "2.0.18"
uniffi = { version = "0.31.0", features = ["cli"] }

[build-dependencies]
cc = "1.0"
