[package]
name = "diy_typeless_core"
version = "0.1.0"
edition = "2021"
description = "Rust core for DIY Typeless"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
biquad = "0.5.0"
cpal = "0.17.1"
hound = "3.5.1"
flacenc = "0.3"
log = "0.4.29"
once_cell = "1.21.3"
reqwest = { version = "0.13.1", features = ["blocking", "json", "multipart"] }
serde = "1.0.228"
serde_json = "1.0.149"
thiserror = "2.0.18"
uniffi = { version = "0.31.0", features = ["cli"] }
